added github repo link to top of each notebook

--- a/Notebook_1.ipynb
+++ b/Notebook_1.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "1803b0db",
+   "metadata": {},
+   "source": [
+    "https://github.com/havik2323/DTSA5510 repo can be found here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9d136686",
    "metadata": {},
    "source": [
