--- a/Notebook_2.ipynb
+++ b/Notebook_2.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "c1321f09",
+   "metadata": {},
+   "source": [
+    "https://github.com/havik2323/DTSA5510 repo can be found here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6002aacf",
    "metadata": {},
    "source": [
